syntax = "proto3";

package api.agent;

import "model.proto";

option go_package = "github.com/aide-family/moon/api/agent;agent";
option java_multiple_files = true;
option java_package = "api.agent";

service Load {
  // 校验规则
  rpc Evaluate (EvaluateRequest) returns (EvaluateReply);

  // 校验规则
  rpc EvaluateV2 (EvaluateV2Request) returns (EvaluateV2Reply);
}

message StrategyGroupAllRequest {}
message StrategyGroupAllReply {
  repeated GroupSimple groupList = 1;
}

message StrategyGroupDiffRequest {
  // TODO 如果变更频率过快, 考虑加入参数消除抖动
}
message StrategyGroupDiffReply {
  repeated GroupSimple appendItems = 1;
  repeated GroupSimple deleteItems = 2;
  repeated GroupSimple updateItems = 3;
}

message EvaluateRequest {
  repeated GroupSimple groupList = 1;
}
message EvaluateReply {}

message EvaluateV2Request {
  repeated EvaluateGroup groupList = 1;
}

message EvaluateV2Reply {
  string message = 1;
  int32 code = 2;
}
